--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -8,7 +8,6 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
         python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        extra: ["none", "faster-async"]
     permissions:
       contents: read
       pull-requests: write
@@ -24,18 +23,14 @@ jobs:
         with:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
-      - name: Install the project (no extras)
-        if: matrix.extra == 'none'
+      - name: Install the project
         run: uv sync
-      - name: Install the project (faster-async)
-        if: matrix.extra == 'faster-async'
-        run: uv sync --extra faster-async
       - name: Run tests with Coverage
         run: uv run pytest tests --cov=. --cov-branch --cov-report=term
       - name: Upload coverage artifact
         uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4
         with:
-          name: coverage-${{ matrix.os }}-python-${{ matrix.python-version }}-extra-${{ matrix.extra }}
+          name: coverage-${{ matrix.os }}-python-${{ matrix.python-version }}
           path: .coverage
           include-hidden-files: true
   combine-and-comment:
@@ -54,7 +49,7 @@ jobs:
         with:
           python-version: "3.13"
       - name: Install the project
-        run: uv sync --all-extras
+        run: uv sync
       - name: Download all coverage artifacts
         uses: actions/download-artifact@018cc2cf5baa6db3ef3c5f8a56943fffe632ef53
         with:
@@ -62,7 +57,7 @@ jobs:
       - name: Combine coverage data
         run: |
           set -o pipefail
-          uv run coverage combine coverage/*-python-*-extra-*/.coverage
+          uv run coverage combine coverage/*-python-*/.coverage
           uv run coverage report | tee coverage_summary.txt
       - name: Prepare Comment Body
         run: |
