--- a/pyproject.toml
+++ b/pyproject.toml
@@ -151,6 +151,7 @@ xray = ["moto[xray]==5.1.16"]
 
 [dependency-groups]
 dev = [
+    "aioboto3>=7.0.0",
     "coverage>=7.6.9",
     "freezegun>=1.5.1",
     "mypy>=1.17.0",
