--- a/mypy.ini
+++ b/mypy.ini
@@ -11,3 +11,15 @@ warn_redundant_casts = True
 warn_return_any = True
 warn_unused_configs = True
 warn_unused_ignores = True
+
+[mypy-aiobotocore.*]
+ignore_missing_imports = True
+
+[mypy-botocore.*]
+ignore_missing_imports = True
+
+[mypy-boto3.*]
+ignore_missing_imports = True
+
+[mypy-aioboto3.*]
+ignore_missing_imports = True
