--- a/pyproject.toml
+++ b/pyproject.toml
@@ -152,6 +152,7 @@ xray = ["moto[xray]==5.1.16"]
 [dependency-groups]
 dev = [
     "aioboto3>=7.0.0",
+    "boto3-stubs[s3]==1.40.70",
     "coverage>=7.6.9",
     "freezegun>=1.5.1",
     "mypy>=1.17.0",
@@ -159,6 +160,7 @@ dev = [
     "pytest-asyncio>=0.25.2",
     "pytest-cov>=6.0.0",
     "pytest-mock>=3.14.0",
+    "types-aiobotocore[s3]==2.25.2",
 ]
 
 [build-system]
