--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -10,24 +10,36 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+    env:
+      UV_PYTHON: 3.14
     steps:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
       - name: Set up Python
         uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c
         with:
-          python-version: "3.9"
+          python-version: "3.14"
       - name: Install uv
         uses: astral-sh/setup-uv@85856786d1ce8acfbcc2f13a5f3fbd6b938f9f41
         with:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
-      - name: Run uv lock upgrade
-        run: uv lock --upgrade
-      - name: Check for changes in uv.lock
+      - name: Loosen aioboto pins (workflow only)
+        run: uv run scripts/manage_aioboto_pins.py loosen
+
+      - name: Upgrade dependencies with relaxed pins
+        run: uv sync --upgrade --all-extras
+
+      - name: Repin aioboto deps from lock
+        run: uv run scripts/manage_aioboto_pins.py repin
+
+      - name: Re-lock with pinned versions
+        run: uv lock
+
+      - name: Check for changes in pyproject/uv.lock
         id: check_diff
         run: |
-          if git diff --quiet uv.lock; then
+          if git diff --quiet uv.lock pyproject.toml; then
             echo "changed=false" >> $GITHUB_OUTPUT
           else
             echo "changed=true" >> $GITHUB_OUTPUT
@@ -39,16 +51,16 @@ jobs:
         with:
           app-id: ${{ secrets.AUTH_APP_CLIENT_ID }}
           private-key: ${{ secrets.AUTH_APP_PRIVATE_KEY }}
-      - name: Create PR with updated uv.lock
+      - name: Create PR with updated deps
         if: steps.check_diff.outputs.changed == 'true'
         uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e
         with:
           token: ${{ steps.generate-token.outputs.token }}
-          commit-message: "chore: refresh uv.lock"
-          title: "chore: refresh uv.lock"
+          commit-message: "chore: upgrade dependencies and repin aioboto"
+          title: "chore: upgrade dependencies and repin aioboto"
           body: |
-            This PR updates `uv.lock` by running `uv lock --upgrade`.
-            It was triggered automatically (or manually) to keep transitive and unpinned dependencies up-to-date.
+            This PR loosens aiobotocore/aioboto3 pins, upgrades via `uv sync --upgrade --all-extras`, repins to the resolved versions, and refreshes `uv.lock`.
+            It keeps mainline pins strict while allowing safe exploration on the workflow branch.
           branch: bot/uv-lock-refresh
           author: GitHub Actions <actions@github.com>
           delete-branch: true
