--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiomoto"
-version = "0.0.3"
+version = "0.0.4"
 description = "Moto-style AWS service mocks for aiobotocore/aioboto3"
 readme = "README.md"
 authors = [
@@ -34,7 +34,7 @@ classifiers = [
 acm = ["moto[acm]==5.1.16"]
 acmpca = ["moto[acmpca]==5.1.16"]
 all = ["moto[all]==5.1.16"]
-aioboto3 = ["aioboto3>=15.5.0"]
+aioboto3 = ["aioboto3==15.5.0"]
 amp = ["moto[amp]==5.1.16"]
 apigateway = ["moto[apigateway]==5.1.16"]
 apigatewayv2 = ["moto[apigatewayv2]==5.1.16"]
@@ -154,9 +154,10 @@ xray = ["moto[xray]==5.1.16"]
 
 [dependency-groups]
 dev = [
-    "aioboto3>=15.5.0",
+    "aioboto3==15.5.0",
     "types-aioboto3[full]==15.5.0",
-    "boto3-stubs[s3]==1.40.70",
+    "tomlkit>=0.13.2",
+    "boto3-stubs[full]==1.40.61",
     "coverage>=7.6.9",
     "freezegun>=1.5.1",
     "mypy>=1.17.0",
