--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,22 @@
 [project]
 name = "aiomoto"
-version = "0.0.4"
+version = "0.0.5"
 description = "Moto-style AWS service mocks for aiobotocore/aioboto3"
 readme = "README.md"
 authors = [
     { name = "Owen Lamont", email = "owenrlamont@gmail.com" }
 ]
+license = { file = "LICENSE" }
 requires-python = ">=3.10"
+keywords = [
+    "aws",
+    "moto",
+    "aioboto3",
+    "aiobotocore",
+    "asyncio",
+    "testing",
+    "mocks",
+]
 dependencies = [
     "aiobotocore==2.25.1",
     "moto==5.1.17",
@@ -29,6 +39,10 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
     "Topic :: Software Development :: Testing",
 ]
+
+[project.urls]
+Repository = "https://github.com/owenlamont/aiomoto"
+Issues = "https://github.com/owenlamont/aiomoto/issues"
 
 [project.optional-dependencies]
 acm = ["moto[acm]==5.1.17"]
