--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ keywords = [
     "mocks",
 ]
 dependencies = [
-    "aiobotocore==2.25.1",
-    "moto==5.1.17",
+    "aiobotocore>=2.24.1,<=2.25.2",
+    "moto>=5.1.5,<=5.1.17",
 ]
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
@@ -45,125 +45,125 @@ Repository = "https://github.com/owenlamont/aiomoto"
 Issues = "https://github.com/owenlamont/aiomoto/issues"
 
 [project.optional-dependencies]
-acm = ["moto[acm]==5.1.17"]
-acmpca = ["moto[acmpca]==5.1.17"]
-all = ["moto[all]==5.1.17"]
-amp = ["moto[amp]==5.1.17"]
-apigateway = ["moto[apigateway]==5.1.17"]
-apigatewayv2 = ["moto[apigatewayv2]==5.1.17"]
-applicationautoscaling = ["moto[applicationautoscaling]==5.1.17"]
-appsync = ["moto[appsync]==5.1.17"]
-athena = ["moto[athena]==5.1.17"]
-autoscaling = ["moto[autoscaling]==5.1.17"]
-awslambda = ["moto[awslambda]==5.1.17"]
-awslambda-simple = ["moto[awslambda-simple]==5.1.17"]
-backup = ["moto[backup]==5.1.17"]
-batch = ["moto[batch]==5.1.17"]
-batch-simple = ["moto[batch-simple]==5.1.17"]
-budgets = ["moto[budgets]==5.1.17"]
-ce = ["moto[ce]==5.1.17"]
-cloudformation = ["moto[cloudformation]==5.1.17"]
-cloudfront = ["moto[cloudfront]==5.1.17"]
-cloudtrail = ["moto[cloudtrail]==5.1.17"]
-cloudwatch = ["moto[cloudwatch]==5.1.17"]
-codebuild = ["moto[codebuild]==5.1.17"]
-codecommit = ["moto[codecommit]==5.1.17"]
-codepipeline = ["moto[codepipeline]==5.1.17"]
-cognitoidentity = ["moto[cognitoidentity]==5.1.17"]
-cognitoidp = ["moto[cognitoidp]==5.1.17"]
-comprehend = ["moto[comprehend]==5.1.17"]
-config = ["moto[config]==5.1.17"]
-databrew = ["moto[databrew]==5.1.17"]
-datapipeline = ["moto[datapipeline]==5.1.17"]
-datasync = ["moto[datasync]==5.1.17"]
-dax = ["moto[dax]==5.1.17"]
-dms = ["moto[dms]==5.1.17"]
-ds = ["moto[ds]==5.1.17"]
-dynamodb = ["moto[dynamodb]==5.1.17"]
-dynamodbstreams = ["moto[dynamodbstreams]==5.1.17"]
-ebs = ["moto[ebs]==5.1.17"]
-ec2 = ["moto[ec2]==5.1.17"]
-ec2instanceconnect = ["moto[ec2instanceconnect]==5.1.17"]
-ecr = ["moto[ecr]==5.1.17"]
-ecs = ["moto[ecs]==5.1.17"]
-efs = ["moto[efs]==5.1.17"]
-eks = ["moto[eks]==5.1.17"]
-elasticache = ["moto[elasticache]==5.1.17"]
-elasticbeanstalk = ["moto[elasticbeanstalk]==5.1.17"]
-elastictranscoder = ["moto[elastictranscoder]==5.1.17"]
-elb = ["moto[elb]==5.1.17"]
-elbv2 = ["moto[elbv2]==5.1.17"]
-emr = ["moto[emr]==5.1.17"]
-emrcontainers = ["moto[emrcontainers]==5.1.17"]
-emrserverless = ["moto[emrserverless]==5.1.17"]
-es = ["moto[es]==5.1.17"]
-events = ["moto[events]==5.1.17"]
-firehose = ["moto[firehose]==5.1.17"]
-forecast = ["moto[forecast]==5.1.17"]
-glacier = ["moto[glacier]==5.1.17"]
-glue = ["moto[glue]==5.1.17"]
-greengrass = ["moto[greengrass]==5.1.17"]
-guardduty = ["moto[guardduty]==5.1.17"]
-iam = ["moto[iam]==5.1.17"]
-inspector2 = ["moto[inspector2]==5.1.17"]
-iot = ["moto[iot]==5.1.17"]
-iotdata = ["moto[iotdata]==5.1.17"]
-ivs = ["moto[ivs]==5.1.17"]
-kinesis = ["moto[kinesis]==5.1.17"]
-kinesisvideo = ["moto[kinesisvideo]==5.1.17"]
-kinesisvideoarchivedmedia = ["moto[kinesisvideoarchivedmedia]==5.1.17"]
-kms = ["moto[kms]==5.1.17"]
-logs = ["moto[logs]==5.1.17"]
-managedblockchain = ["moto[managedblockchain]==5.1.17"]
-mediaconnect = ["moto[mediaconnect]==5.1.17"]
-medialive = ["moto[medialive]==5.1.17"]
-mediapackage = ["moto[mediapackage]==5.1.17"]
-mediastore = ["moto[mediastore]==5.1.17"]
-mediastoredata = ["moto[mediastoredata]==5.1.17"]
-meteringmarketplace = ["moto[meteringmarketplace]==5.1.17"]
-mq = ["moto[mq]==5.1.17"]
-opsworks = ["moto[opsworks]==5.1.17"]
-organizations = ["moto[organizations]==5.1.17"]
-panorama = ["moto[panorama]==5.1.17"]
-personalize = ["moto[personalize]==5.1.17"]
-pinpoint = ["moto[pinpoint]==5.1.17"]
-polly = ["moto[polly]==5.1.17"]
-proxy = ["moto[proxy]==5.1.17"]
-quicksight = ["moto[quicksight]==5.1.17"]
-ram = ["moto[ram]==5.1.17"]
-rds = ["moto[rds]==5.1.17"]
-redshift = ["moto[redshift]==5.1.17"]
-redshiftdata = ["moto[redshiftdata]==5.1.17"]
-rekognition = ["moto[rekognition]==5.1.17"]
-resourcegroups = ["moto[resourcegroups]==5.1.17"]
-resourcegroupstaggingapi = ["moto[resourcegroupstaggingapi]==5.1.17"]
-route53 = ["moto[route53]==5.1.17"]
-route53resolver = ["moto[route53resolver]==5.1.17"]
-s3 = ["moto[s3]==5.1.17"]
-s3control = ["moto[s3control]==5.1.17"]
-s3crc32c = ["moto[s3crc32c]==5.1.17"]
-sagemaker = ["moto[sagemaker]==5.1.17"]
-scheduler = ["moto[scheduler]==5.1.17"]
-sdb = ["moto[sdb]==5.1.17"]
-secretsmanager = ["moto[secretsmanager]==5.1.17"]
-server = ["moto[server]==5.1.17"]
-servicediscovery = ["moto[servicediscovery]==5.1.17"]
-servicequotas = ["moto[servicequotas]==5.1.17"]
-ses = ["moto[ses]==5.1.17"]
-signer = ["moto[signer]==5.1.17"]
-sns = ["moto[sns]==5.1.17"]
-sqs = ["moto[sqs]==5.1.17"]
-ssm = ["moto[ssm]==5.1.17"]
-ssoadmin = ["moto[ssoadmin]==5.1.17"]
-stepfunctions = ["moto[stepfunctions]==5.1.17"]
-sts = ["moto[sts]==5.1.17"]
-support = ["moto[support]==5.1.17"]
-swf = ["moto[swf]==5.1.17"]
-textract = ["moto[textract]==5.1.17"]
-timestreamwrite = ["moto[timestreamwrite]==5.1.17"]
-transcribe = ["moto[transcribe]==5.1.17"]
-wafv2 = ["moto[wafv2]==5.1.17"]
-xray = ["moto[xray]==5.1.17"]
+acm = ["moto[acm]>=5.1.5,<=5.1.17"]
+acmpca = ["moto[acmpca]>=5.1.5,<=5.1.17"]
+all = ["moto[all]>=5.1.5,<=5.1.17"]
+amp = ["moto[amp]>=5.1.5,<=5.1.17"]
+apigateway = ["moto[apigateway]>=5.1.5,<=5.1.17"]
+apigatewayv2 = ["moto[apigatewayv2]>=5.1.5,<=5.1.17"]
+applicationautoscaling = ["moto[applicationautoscaling]>=5.1.5,<=5.1.17"]
+appsync = ["moto[appsync]>=5.1.5,<=5.1.17"]
+athena = ["moto[athena]>=5.1.5,<=5.1.17"]
+autoscaling = ["moto[autoscaling]>=5.1.5,<=5.1.17"]
+awslambda = ["moto[awslambda]>=5.1.5,<=5.1.17"]
+awslambda-simple = ["moto[awslambda-simple]>=5.1.5,<=5.1.17"]
+backup = ["moto[backup]>=5.1.5,<=5.1.17"]
+batch = ["moto[batch]>=5.1.5,<=5.1.17"]
+batch-simple = ["moto[batch-simple]>=5.1.5,<=5.1.17"]
+budgets = ["moto[budgets]>=5.1.5,<=5.1.17"]
+ce = ["moto[ce]>=5.1.5,<=5.1.17"]
+cloudformation = ["moto[cloudformation]>=5.1.5,<=5.1.17"]
+cloudfront = ["moto[cloudfront]>=5.1.5,<=5.1.17"]
+cloudtrail = ["moto[cloudtrail]>=5.1.5,<=5.1.17"]
+cloudwatch = ["moto[cloudwatch]>=5.1.5,<=5.1.17"]
+codebuild = ["moto[codebuild]>=5.1.5,<=5.1.17"]
+codecommit = ["moto[codecommit]>=5.1.5,<=5.1.17"]
+codepipeline = ["moto[codepipeline]>=5.1.5,<=5.1.17"]
+cognitoidentity = ["moto[cognitoidentity]>=5.1.5,<=5.1.17"]
+cognitoidp = ["moto[cognitoidp]>=5.1.5,<=5.1.17"]
+comprehend = ["moto[comprehend]>=5.1.5,<=5.1.17"]
+config = ["moto[config]>=5.1.5,<=5.1.17"]
+databrew = ["moto[databrew]>=5.1.5,<=5.1.17"]
+datapipeline = ["moto[datapipeline]>=5.1.5,<=5.1.17"]
+datasync = ["moto[datasync]>=5.1.5,<=5.1.17"]
+dax = ["moto[dax]>=5.1.5,<=5.1.17"]
+dms = ["moto[dms]>=5.1.5,<=5.1.17"]
+ds = ["moto[ds]>=5.1.5,<=5.1.17"]
+dynamodb = ["moto[dynamodb]>=5.1.5,<=5.1.17"]
+dynamodbstreams = ["moto[dynamodbstreams]>=5.1.5,<=5.1.17"]
+ebs = ["moto[ebs]>=5.1.5,<=5.1.17"]
+ec2 = ["moto[ec2]>=5.1.5,<=5.1.17"]
+ec2instanceconnect = ["moto[ec2instanceconnect]>=5.1.5,<=5.1.17"]
+ecr = ["moto[ecr]>=5.1.5,<=5.1.17"]
+ecs = ["moto[ecs]>=5.1.5,<=5.1.17"]
+efs = ["moto[efs]>=5.1.5,<=5.1.17"]
+eks = ["moto[eks]>=5.1.5,<=5.1.17"]
+elasticache = ["moto[elasticache]>=5.1.5,<=5.1.17"]
+elasticbeanstalk = ["moto[elasticbeanstalk]>=5.1.5,<=5.1.17"]
+elastictranscoder = ["moto[elastictranscoder]>=5.1.5,<=5.1.17"]
+elb = ["moto[elb]>=5.1.5,<=5.1.17"]
+elbv2 = ["moto[elbv2]>=5.1.5,<=5.1.17"]
+emr = ["moto[emr]>=5.1.5,<=5.1.17"]
+emrcontainers = ["moto[emrcontainers]>=5.1.5,<=5.1.17"]
+emrserverless = ["moto[emrserverless]>=5.1.5,<=5.1.17"]
+es = ["moto[es]>=5.1.5,<=5.1.17"]
+events = ["moto[events]>=5.1.5,<=5.1.17"]
+firehose = ["moto[firehose]>=5.1.5,<=5.1.17"]
+forecast = ["moto[forecast]>=5.1.5,<=5.1.17"]
+glacier = ["moto[glacier]>=5.1.5,<=5.1.17"]
+glue = ["moto[glue]>=5.1.5,<=5.1.17"]
+greengrass = ["moto[greengrass]>=5.1.5,<=5.1.17"]
+guardduty = ["moto[guardduty]>=5.1.5,<=5.1.17"]
+iam = ["moto[iam]>=5.1.5,<=5.1.17"]
+inspector2 = ["moto[inspector2]>=5.1.5,<=5.1.17"]
+iot = ["moto[iot]>=5.1.5,<=5.1.17"]
+iotdata = ["moto[iotdata]>=5.1.5,<=5.1.17"]
+ivs = ["moto[ivs]>=5.1.5,<=5.1.17"]
+kinesis = ["moto[kinesis]>=5.1.5,<=5.1.17"]
+kinesisvideo = ["moto[kinesisvideo]>=5.1.5,<=5.1.17"]
+kinesisvideoarchivedmedia = ["moto[kinesisvideoarchivedmedia]>=5.1.5,<=5.1.17"]
+kms = ["moto[kms]>=5.1.5,<=5.1.17"]
+logs = ["moto[logs]>=5.1.5,<=5.1.17"]
+managedblockchain = ["moto[managedblockchain]>=5.1.5,<=5.1.17"]
+mediaconnect = ["moto[mediaconnect]>=5.1.5,<=5.1.17"]
+medialive = ["moto[medialive]>=5.1.5,<=5.1.17"]
+mediapackage = ["moto[mediapackage]>=5.1.5,<=5.1.17"]
+mediastore = ["moto[mediastore]>=5.1.5,<=5.1.17"]
+mediastoredata = ["moto[mediastoredata]>=5.1.5,<=5.1.17"]
+meteringmarketplace = ["moto[meteringmarketplace]>=5.1.5,<=5.1.17"]
+mq = ["moto[mq]>=5.1.5,<=5.1.17"]
+opsworks = ["moto[opsworks]>=5.1.5,<=5.1.17"]
+organizations = ["moto[organizations]>=5.1.5,<=5.1.17"]
+panorama = ["moto[panorama]>=5.1.5,<=5.1.17"]
+personalize = ["moto[personalize]>=5.1.5,<=5.1.17"]
+pinpoint = ["moto[pinpoint]>=5.1.5,<=5.1.17"]
+polly = ["moto[polly]>=5.1.5,<=5.1.17"]
+proxy = ["moto[proxy]>=5.1.5,<=5.1.17"]
+quicksight = ["moto[quicksight]>=5.1.5,<=5.1.17"]
+ram = ["moto[ram]>=5.1.5,<=5.1.17"]
+rds = ["moto[rds]>=5.1.5,<=5.1.17"]
+redshift = ["moto[redshift]>=5.1.5,<=5.1.17"]
+redshiftdata = ["moto[redshiftdata]>=5.1.5,<=5.1.17"]
+rekognition = ["moto[rekognition]>=5.1.5,<=5.1.17"]
+resourcegroups = ["moto[resourcegroups]>=5.1.5,<=5.1.17"]
+resourcegroupstaggingapi = ["moto[resourcegroupstaggingapi]>=5.1.5,<=5.1.17"]
+route53 = ["moto[route53]>=5.1.5,<=5.1.17"]
+route53resolver = ["moto[route53resolver]>=5.1.5,<=5.1.17"]
+s3 = ["moto[s3]>=5.1.5,<=5.1.17"]
+s3control = ["moto[s3control]>=5.1.5,<=5.1.17"]
+s3crc32c = ["moto[s3crc32c]>=5.1.5,<=5.1.17"]
+sagemaker = ["moto[sagemaker]>=5.1.5,<=5.1.17"]
+scheduler = ["moto[scheduler]>=5.1.5,<=5.1.17"]
+sdb = ["moto[sdb]>=5.1.5,<=5.1.17"]
+secretsmanager = ["moto[secretsmanager]>=5.1.5,<=5.1.17"]
+server = ["moto[server]>=5.1.5,<=5.1.17"]
+servicediscovery = ["moto[servicediscovery]>=5.1.5,<=5.1.17"]
+servicequotas = ["moto[servicequotas]>=5.1.5,<=5.1.17"]
+ses = ["moto[ses]>=5.1.5,<=5.1.17"]
+signer = ["moto[signer]>=5.1.5,<=5.1.17"]
+sns = ["moto[sns]>=5.1.5,<=5.1.17"]
+sqs = ["moto[sqs]>=5.1.5,<=5.1.17"]
+ssm = ["moto[ssm]>=5.1.5,<=5.1.17"]
+ssoadmin = ["moto[ssoadmin]>=5.1.5,<=5.1.17"]
+stepfunctions = ["moto[stepfunctions]>=5.1.5,<=5.1.17"]
+sts = ["moto[sts]>=5.1.5,<=5.1.17"]
+support = ["moto[support]>=5.1.5,<=5.1.17"]
+swf = ["moto[swf]>=5.1.5,<=5.1.17"]
+textract = ["moto[textract]>=5.1.5,<=5.1.17"]
+timestreamwrite = ["moto[timestreamwrite]>=5.1.5,<=5.1.17"]
+transcribe = ["moto[transcribe]>=5.1.5,<=5.1.17"]
+wafv2 = ["moto[wafv2]>=5.1.5,<=5.1.17"]
+xray = ["moto[xray]>=5.1.5,<=5.1.17"]
 
 [dependency-groups]
 dev = [
@@ -182,5 +182,5 @@ dev = [
 ]
 
 [build-system]
-requires = ["uv_build>=0.9.9,<0.10.0"]
+requires = ["uv_build>=0.9.9,<=0.10.0"]
 build-backend = "uv_build"
