--- a/pyproject.toml
+++ b/pyproject.toml
@@ -183,5 +183,5 @@ dev = [
 ]
 
 [build-system]
-requires = ["uv_build>=0.9.9,<=0.10.0"]
+requires = ["uv_build>=0.9.9,<0.10.0"]
 build-backend = "uv_build"
