--- a/pyproject.toml
+++ b/pyproject.toml
@@ -181,6 +181,8 @@ dev = [
     "pytest-mock>=3.14.0",
     "types-aiobotocore[full]>=2.24.1",
     "s3fs>=2024.6.0",
+    "pytest-randomly>=4.0.1",
+    "pytest-xdist[psutil]>=3.8.0",
 ]
 
 [build-system]
