30 duplicate select moto tests (#31)
* test: add async STS tests for session and federation tokens

* chore: update test requirements and improve pytest commands for better performance

* test: add async KMS tests and update STS tests for consistency

* test: add async tests for SQS and SNS functionalities

* feat: enhance mock_aws context with additional kwargs support and add async Lambda tests

* feat: add support for config kwargs in mock_aws context and decorator, with corresponding tests

* test: add async tests for CodeBuild project creation and listing

* test: add async tests for AWS CodeCommit repository operations

* test: add async tests for CodeDeploy operations

* test: add async tests for CodePipeline operations

* test: add async tests for Marketplace Metering service

* test: add async tests for Network Firewall operations

* test: add async tests for MemoryDB operations

* test: add async tests for Kafka cluster operations

* test: add async tests for OpenSearch Serverless and enhance s3fs integration

* test: add async tests for Service Quotas operations

* test: add async tests for AWS Shield protection operations

* test: add async tests for RAM resource sharing operations

* test: add async tests for App Mesh, DataSync, DAX, Direct Connect, ElastiCache, FSx, Identity Store, IVS, MediaStore Data, and Polly services

* test: add async tests for ACM PCA, API Gateway Management API, Backup, Bedrock, Bedrock Agent, CloudHSM V2, Connect Campaigns, DynamoDB Streams, EBS, EC2 Instance Connect, and Lex V2 Models services

* Refactor tests to include branch coverage annotations

- Added `# pragma: no branch` comments to various `pytest.raises` contexts across multiple test files to improve code coverage reporting.
- Introduced new test files for `macie_async`, `personalize_async`, `rekognition_async`, `resourcegroups_async`, `route53domains_async`, `securityhub_async`, `servicequotas_async`, `timestreamquery_async`, `transcribe_async`, and `transfer_asyn

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiomoto"
-version = "0.0.6"
+version = "0.0.7"
 description = "Moto-style AWS service mocks for aiobotocore/aioboto3"
 readme = "README.md"
 authors = [
@@ -181,6 +181,8 @@ dev = [
     "pytest-mock>=3.14.0",
     "types-aiobotocore[full]>=2.24.1",
     "s3fs>=2024.6.0",
+    "pytest-randomly>=4.0.1",
+    "pytest-xdist[psutil]>=3.8.0",
 ]
 
 [build-system]
