Refactor code structure for improved readability and maintainability

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install the project
         run: uv sync
       - name: Run tests with Coverage
-        run: uv run pytest tests --cov=. --cov-branch --cov-report=term
+        run: uv run pytest -n logical --color=no tests --cov=. --cov-branch --cov-report=term
       - name: Upload coverage artifact
         uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4
         with:
