--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -74,6 +74,9 @@ repos:
     rev: 0.15.1
     hooks:
       - id: uv-secure
+        additional_dependencies:
+          # Temporary until asyncer declares sniffio (see https://github.com/fastapi/asyncer/pull/421)
+          - sniffio>=1.3.1
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.37.1
     hooks:
