--- a/pyproject.toml
+++ b/pyproject.toml
@@ -183,6 +183,8 @@ dev = [
     "s3fs>=2024.6.0",
     "pytest-randomly>=4.0.1",
     "pytest-xdist[psutil]>=3.8.0",
+    "pandas>=2.3.3",
+    "pyarrow>=22.0.0",
 ]
 
 [build-system]
