--- a/pyproject.toml
+++ b/pyproject.toml
@@ -185,6 +185,7 @@ dev = [
     "pytest-xdist[psutil]>=3.8.0",
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
+    "pandas-stubs>=2.3.3.251201",
 ]
 
 [build-system]
