--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,16 +37,10 @@ repos:
         pass_filenames: false
   - repo: local
     hooks:
-      - id: mypy
-        name: mypy (src)
+      - id: ty
+        name: ty
         language: system
-        entry: uv run --group dev mypy src/
-        pass_filenames: false
-        types: [python]
-      - id: mypy-tests
-        name: mypy (tests)
-        language: system
-        entry: uv run --group dev mypy tests/ --explicit-package-bases
+        entry: ty check . --error-on-warning
         pass_filenames: false
         types: [python]
   - repo: https://github.com/rvben/rumdl-pre-commit
