--- a/pyproject.toml
+++ b/pyproject.toml
@@ -185,6 +185,7 @@ dev = [
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
     "pandas-stubs>=2.3.3.251201",
+    "moto[server]>=5.1.19",
 ]
 
 [build-system]
