--- a/pyproject.toml
+++ b/pyproject.toml
@@ -185,7 +185,9 @@ dev = [
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
     "pandas-stubs>=2.3.3.251201",
-    "moto[server]>=5.1.19",
+  # Gated on Windows 3.14+ until pywin32 free-threaded wheels land:
+  # https://github.com/mhammond/pywin32/issues/2303
+  "moto[server]>=5.1.19 ; python_full_version < '3.14' or sys_platform != 'win32'",
 ]
 
 [build-system]
