--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,7 +174,6 @@ dev = [
     "packaging>=25.0",
     "coverage>=7.6.9",
     "freezegun>=1.5.1",
-    "mypy>=1.17.0",
     "pytest>=8.3.4",
     "pytest-asyncio>=0.25.2",
     "pytest-cov>=6.0.0",
@@ -186,6 +185,9 @@ dev = [
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
     "pandas-stubs>=2.3.3.251201",
+  # Gated on Windows 3.14+ until pywin32 free-threaded wheels land:
+  # https://github.com/mhammond/pywin32/issues/2303
+  "moto[server]>=5.1.19 ; python_full_version < '3.14' or sys_platform != 'win32'",
 ]
 
 [build-system]
