--- a/pyproject.toml
+++ b/pyproject.toml
@@ -164,6 +164,7 @@ timestreamwrite = ["moto[timestreamwrite]>=5.1.5,<=5.1.19"]
 transcribe = ["moto[transcribe]>=5.1.5,<=5.1.19"]
 wafv2 = ["moto[wafv2]>=5.1.5,<=5.1.19"]
 xray = ["moto[xray]>=5.1.5,<=5.1.19"]
+pandas = ["pandas>=2.3.3,<=2.3.3"]
 
 [dependency-groups]
 dev = [
@@ -182,7 +183,7 @@ dev = [
     "s3fs>=2024.6.0",
     "pytest-randomly>=4.0.1",
     "pytest-xdist[psutil]>=3.8.0",
-    "pandas>=2.3.3",
+    "pandas>=2.3.3,<=2.3.3",
     "pyarrow>=22.0.0",
     "pandas-stubs>=2.3.3.251201",
   # Gated on Windows 3.14+ until pywin32 free-threaded wheels land:
