--- a/pyproject.toml
+++ b/pyproject.toml
@@ -164,6 +164,8 @@ timestreamwrite = ["moto[timestreamwrite]>=5.1.5,<=5.1.19"]
 transcribe = ["moto[transcribe]>=5.1.5,<=5.1.19"]
 wafv2 = ["moto[wafv2]>=5.1.5,<=5.1.19"]
 xray = ["moto[xray]>=5.1.5,<=5.1.19"]
+# Pinned until pandas 3.14/free-threaded support stabilizes:
+# https://github.com/pandas-dev/pandas/issues/62261
 pandas = ["pandas>=2.3.3,<=2.3.3"]
 
 [dependency-groups]
@@ -183,6 +185,8 @@ dev = [
     "s3fs>=2024.6.0",
     "pytest-randomly>=4.0.1",
     "pytest-xdist[psutil]>=3.8.0",
+    # Pinned until pandas 3.14/free-threaded support stabilizes:
+    # https://github.com/pandas-dev/pandas/issues/62261
     "pandas>=2.3.3,<=2.3.3",
     "pyarrow>=22.0.0",
     "pandas-stubs>=2.3.3.251201",
