--- a/pyproject.toml
+++ b/pyproject.toml
@@ -166,7 +166,9 @@ wafv2 = ["moto[wafv2]>=5.1.5,<=5.1.19"]
 xray = ["moto[xray]>=5.1.5,<=5.1.19"]
 # Pinned until pandas 3.14/free-threaded support stabilizes:
 # https://github.com/pandas-dev/pandas/issues/62261
-pandas = ["pandas>=2.3.3,<=2.3.3"]
+pandas = [
+    "pandas>=2.0.0,<=2.3.3",
+]
 
 [dependency-groups]
 dev = [
@@ -187,12 +189,12 @@ dev = [
     "pytest-xdist[psutil]>=3.8.0",
     # Pinned until pandas 3.14/free-threaded support stabilizes:
     # https://github.com/pandas-dev/pandas/issues/62261
-    "pandas>=2.3.3,<=2.3.3",
+    "pandas>=2.0.0,<=2.3.3",
     "pyarrow>=22.0.0",
     "pandas-stubs>=2.3.3.251201",
-  # Gated on Windows 3.14+ until pywin32 free-threaded wheels land:
-  # https://github.com/mhammond/pywin32/issues/2303
-  "moto[server]>=5.1.19 ; python_full_version < '3.14' or sys_platform != 'win32'",
+    # Gated on Windows 3.14+ until pywin32 free-threaded wheels land:
+    # https://github.com/mhammond/pywin32/issues/2303
+    "moto[server]>=5.1.19 ; python_full_version < '3.14' or sys_platform != 'win32'",
 ]
 
 [build-system]
