Add Polars support in aiomoto server mode (#63)
* Enhance Polars support in aiomoto

- Updated README.md to reflect changes in Polars S3 I/O handling.
- Added Polars dependency in pyproject.toml and uv.lock for version 1.36.1.
- Implemented server mode patching for Polars in server_mode.py, allowing for endpoint injection in S3 operations.
- Created tests for Polars server mode functionality, ensuring correct behavior for various file formats (parquet, csv, ipc, ndjson).
- Enhanced internal tests to cover new Polars storage options and ensure proper integration with existing functionality.

* Skip tests for Polars on Python 3.14 due to lack of support

* Update Polars dependency to support Python versions below 3.14

* Update Polars version constraints to support Python 3.14 compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -169,6 +169,13 @@ xray = ["moto[xray]>=5.1.5,<=5.1.19"]
 pandas = [
     "pandas>=2.2.0,<=2.3.3",
 ]
+# Pinned while validating Polars server-mode shim:
+# https://github.com/owenlamont/aiomoto/issues/48
+# Python 3.14 support tracked upstream:
+# https://github.com/pola-rs/polars/issues/25035
+polars = [
+    "polars>=1.35.1,<=1.36.1 ; python_full_version < '3.14'",
+]
 
 [dependency-groups]
 dev = [
@@ -195,6 +202,11 @@ dev = [
     # Gated on Windows 3.14+ until pywin32 free-threaded wheels land:
     # https://github.com/mhammond/pywin32/issues/2303
     "moto[server]>=5.1.19 ; python_full_version < '3.14' or sys_platform != 'win32'",
+    # Pinned while validating Polars server-mode shim:
+    # https://github.com/owenlamont/aiomoto/issues/48
+    # Python 3.14 support tracked upstream:
+    # https://github.com/pola-rs/polars/issues/25035
+    "polars>=1.35.1,<=1.36.1 ; python_full_version < '3.14'",
 ]
 
 [build-system]
