feat: add server-mode attach + registry, orjson, and custom exceptions
  - add server_mode attach via explicit server_port (no server ownership/stop), with
    healthcheck and stable endpoint/registry metadata on the context
  - write server registry files in a user cache dir via platformdirs; expose
    AIOMOTO_SERVER_REGISTRY_DIR + AIOMOTO_SERVER_PORT and server_registry_path
  - replace stdlib json with orjson for registry serialization
  - add flat aiomoto exceptions module (no hierarchy), swap RuntimeError/ValueError
    raises for semantic exceptions, and re-export from aiomoto.__init__
  - update README server-mode docs with registry filename + JSON payload example;
    remove timeout note from AGENTS; bump version to 0.3.0
  - expand tests for server-mode state/attach/registry cleanup and new exceptions;
    keep 100% branch coverage
  - refresh uv.lock for new deps (platformdirs, orjson) and version bump

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiomoto"
-version = "0.2.0"
+version = "0.3.0"
 description = "Moto-style AWS service mocks for aiobotocore/aioboto3"
 readme = "README.md"
 authors = [
@@ -20,6 +20,8 @@ keywords = [
 dependencies = [
     "aiobotocore>=2.24.1,<=2.25.1",
     "moto>=5.1.5,<=5.1.19",
+    "orjson>=3.11.5",
+    "platformdirs>=4.0.0",
 ]
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
